Bug 722240 - Submit Telemetry only for official builds; r=taras